commit by najam

--- a/src/app/product/product.page.html
+++ b/src/app/product/product.page.html
@@ -186,7 +186,7 @@
 
          <button style="    width: 91%;
          padding: 20px;
-         background: #FFBB0E;
+         background:#3bb77e;
          border-radius: 10px;
          color:white ;" *ngIf="product.type != 'external'" class="add-to-cart-button" expand="block"
             [disabled]="disableButton || product.stock_status == 'outofstock' || (product.type == 'grouped' && !groupedProducts.length)"
