--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
-  /** primary **/
-  --ion-color-primary: #FFBB0E;
+  /** primary #FFBB0E**/
+  --ion-color-primary: #3bb77e;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -44,12 +44,12 @@
   --ion-color-warning-tint: #ffca22;
 
   /** danger **/
-  --ion-color-danger: #FFBB0E;
+  --ion-color-danger: #3bb77e;
   --ion-color-danger-rgb: 235, 68, 90;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #FFBB0E;
-  --ion-color-danger-tint: #FFBB0E;
+  --ion-color-danger-shade: #3bb77e;
+  --ion-color-danger-tint: #3bb77e;
 
   /** dark **/
   --ion-color-dark: #222428;
