--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,7 +1,7 @@
 <ion-header mode='ios'>
-  <ion-toolbar  style="padding-top: 32px !important;">
-  	<ion-searchbar mode="ios" animated [(ngModel)]="searchInput" (ionChange)="onInput()"></ion-searchbar>
-  <!--ion-buttons slot="primary">
+  <ion-toolbar style="padding-top: 32px !important;">
+    <ion-searchbar mode="ios" animated [(ngModel)]="searchInput" (ionChange)="onInput()"></ion-searchbar>
+    <!--ion-buttons slot="primary">
     <ion-icon slot="end" color="medium" (click)="scanBarcode()" slot="icon-only" name="barcode-outline"></ion-icon>
   </ion-buttons-->
   </ion-toolbar>
@@ -9,42 +9,54 @@
 
 <ion-content class="search">
 
-<div *ngIf="!loading && !products.length && !searchInput" class="empty">
-  <ion-icon color="medium" name="search"></ion-icon>
-</div>  
+  <div *ngIf="!loading && !products.length && !searchInput" class="empty">
+    <ion-icon color="medium" name="search"></ion-icon>
+  </div>
 
-<div class="spinner" *ngIf="loading"><ion-spinner> </ion-spinner></div>
+  <div class="spinner" *ngIf="loading"><ion-spinner> </ion-spinner></div>
 
-<div *ngIf="!products.length && !loading && searchInput" class="no-products">
-  <h2>{{"No Products found" | translate}}!</h2>
-</div>
+  <div *ngIf="!products.length && !loading && searchInput" class="no-products">
+    <h2>{{"No Products found" | translate}}!</h2>
+  </div>
 
-<div *ngIf="!loading && products">
-  <ion-row>
-    <ion-col size="{{settings.colWidthSearch}}" size-sm="4" size-md="3" *ngFor="let product of products" [style.padding.px]="settings.dimensions.productPadding">
-    <ion-card mode="{{settings.settings.mode}}" button="true" class="ion-activatable ion-focusable hydrated {{settings.settings.product_shadow}}" [style.border-radius.px]="settings.dimensions.productBorderRadius" (click)="getProduct(product)">
-      <ion-img alt="" *ngIf="product.images" [style.height.px]="settings.dimensions.searchGridViewHeight" src="{{product.images[0]?.src}}"></ion-img>
-      <ion-icon name="heart-outline" mode="md" class="wishlist-button-grid" *ngIf="!settings.wishlist[product.id]" (click)="settings.addToWishlist(product.id); $event.stopPropagation()"></ion-icon>
-      <ion-icon name="heart" color="{{settings.theme.button}}" mode="md" class="wishlist-button-grid" *ngIf="settings.wishlist[product.id]" (click)="settings.removeFromWishlist(product.id); $event.stopPropagation()"></ion-icon>
+  <div *ngIf="!loading && products">
+    <ion-row>
+      <ion-col size="{{settings.colWidthSearch}}" size-sm="4" size-md="3" *ngFor="let product of products"
+        [style.padding.px]="settings.dimensions.productPadding">
+        <ion-card mode="{{settings.settings.mode}}" button="true"
+          class="ion-activatable ion-focusable hydrated {{settings.settings.product_shadow}}"
+          [style.border-radius.px]="settings.dimensions.productBorderRadius" (click)="getProduct(product)">
+          <ion-img alt="" *ngIf="product.images" [style.height.px]="settings.dimensions.searchGridViewHeight"
+            src="{{product.images[0]?.src}}"></ion-img>
+          <ion-icon name="heart-outline" mode="md" class="wishlist-button-grid" *ngIf="!settings.wishlist[product.id]"
+            (click)="settings.addToWishlist(product.id); $event.stopPropagation()"></ion-icon>
+          <ion-icon name="heart" color="{{settings.theme.button}}" mode="md" class="wishlist-button-grid"
+            *ngIf="settings.wishlist[product.id]"
+            (click)="settings.removeFromWishlist(product.id); $event.stopPropagation()"></ion-icon>
 
-      <ion-button color="danger" class="stock" *ngIf="product.stock_status == 'outofstock'">{{"No Stock" | translate}}</ion-button>
-      <div *ngIf="product.stock_status == 'instock'">
-      <ion-button class="offer" *ngIf="((product.regular_price - product.price) /product.regular_price*100) >= 1">{{(product.regular_price - product.price) /product.regular_price*100 | number : '1.0-0'}}%</ion-button>
-      </div>
-      
-      <ion-card-header>
-        <ion-card-title mode="md">{{product.name}}</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p class="price">
-            <span class="regular-price" *ngIf="!product.sale_price" [innerHTML]="product.formated_price"></span>
-            <span class="regular-price" *ngIf="product.sale_price" [innerHTML]="product.formated_price">{{product.formated_sales_price}}<span class="special-price"><del [innerHTML]="product.formated_price">{{product.formated_price}}</del></span></span>
-        </p>
-      </ion-card-content>
-    </ion-card>
-    </ion-col>
-  </ion-row>
-</div>
+          <ion-button color="danger" class="stock" *ngIf="product.stock_status == 'outofstock'">{{"No Stock" |
+            translate}}</ion-button>
+          <div *ngIf="product.stock_status == 'instock'">
+            <ion-button class="offer"
+              *ngIf="((product.regular_price - product.price) /product.regular_price*100) >= 1">{{(product.regular_price
+              - product.price) /product.regular_price*100 | number : '1.0-0'}}%</ion-button>
+          </div>
+
+          <ion-card-header>
+            <ion-card-title mode="md">{{product.name}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <p class="price">
+              <span class="regular-price" *ngIf="!product.sale_price" [innerHTML]="product.formated_price"></span>
+              <span class="regular-price" *ngIf="product.sale_price"
+                [innerHTML]="product.formated_price">{{product.formated_sales_price}}<span class="special-price"><del
+                    [innerHTML]="product.formated_price">{{product.formated_price}}</del></span></span>
+            </p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </div>
 
   <!-- LIST VIEW -->
   <!--ion-list style="padding-bottom: 0; padding-top: 0;" class="product-list3" *ngIf="!loading && products">
@@ -102,11 +114,9 @@
   </ion-list-->
   <!-- END OF LIST VIEW -->
 
-<ion-infinite-scroll threshold="100px" *ngIf="hasMoreItems && products.length" (ionInfinite)="loadData($event)">
-  <ion-infinite-scroll-content
-    loadingSpinner="bubbles"
-    loadingText="Loading more data...">
-  </ion-infinite-scroll-content>
-</ion-infinite-scroll>
+  <ion-infinite-scroll threshold="100px" *ngIf="hasMoreItems && products.length" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
