--- a/src/app/products/products.page.scss
+++ b/src/app/products/products.page.scss
@@ -20,16 +20,17 @@ ion-card-header {
 ion-card-content {
     padding: 0;
     .price {
-        padding: 0 4px 4px 4px;
+        padding: 0 6px 4px 4px;
         font-size: 16px;
         line-height: 2rem;
         color: var(--ion-color-dark, #eb445a);
         font-weight: 500;
         .special-price {
             //color: #868686;
-            padding-left: 5px;
-            font-size: 10px;
+            // padding-left: 5px;
+            font-size: 12px;
             font-weight: 300;
+            text-decoration: line-through;
         }
     }
 }
@@ -140,9 +141,10 @@ ion-card-subtitle {
                 color: var(--ion-color-dark, #eb445a);
                 font-weight: 500;
                 .special-price {
-                    padding-left: 5px;
-                    font-size: 10px;
+                    // padding-left: 5px;
+                    font-size: 12px;
                     font-weight: 300;
+                    text-decoration: line-through;
                 }
             }
             ion-icon {
